# ingresseira_yew

./: Cargo.toml
src/: element_from_html_string.rs  icons.rs  ingresseira.rs  main.rs  svg_buttons.rs
src/ingresseira/: common_objs.rs  element_from_html_string.rs  header.rs  mod.rs  parties_list.rs
src/ingresseira/header/: mod.rs
src/ingresseira/services/: mod.rs
src/ingresseira/services/context_provider/: mod.rs
src/ingresseira/services/router/: mod.rs  routing.rs
static/: header.css  index.html  styles.css  tickets.css
