[package]
name = "ingresseira_yew"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]

[dependencies]
stdweb = "0.4.8"
yew = { git = "https://github.com/DenisKolodin/yew"}
failure = "0.1.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "*"
strum = "*"
strum_macros = "*"

